Source/WebCore: "Attempt to insert nil value " exception when calling attributed string APIs on content with a custom font https://bugs.webkit.org/show_bug.cgi?id=81630 <rdar://problem/10650660>

Reviewed by Alexey Proskuryakov.

Test: TestWebKitAPI/Tests/mac/AttributedString.mm

If content is using a custom font, then the platform font will be nil and needs to be nil checked.

* platform/mac/HTMLConverter.mm: (+[WebHTMLConverter editingAttributedStringFromRange:]):

Tools: "Attempt to insert nil value " exception when calling attributed string APIs on content with a custom font
https://bugs.webkit.org/show_bug.cgi?id=81630
<rdar://problem/10650660>

Reviewed by Alexey Proskuryakov.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/mac/Ahem.ttf: Added.
* TestWebKitAPI/Tests/mac/AttributedString.mm: Added.
(-[AttributedStringTest webView:didFinishLoadForFrame:]):
(TestWebKitAPI):
(TestWebKitAPI::didFinishLoadForFrame):
(TestWebKitAPI::TEST):
* TestWebKitAPI/Tests/mac/attributedStringCustomFont.html: Added.



Canonical link: https://commits.webkit.org/98951@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111436 268f45cc-cd09-0410-ab3c-d52691b4dbfc